--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ Babel==2.14.0
 beautifulsoup4==4.12.3
 bleach==6.1.0
 blinker==1.7.0
-boto3==1.28.84
+boto3
 botocore==1.31.84
 cachetools==5.3.2
 certifi==2023.7.22
@@ -138,7 +138,7 @@ typing_extensions==4.8.0
 tzdata==2023.3
 tzlocal==5.2
 uri-template==1.3.0
-urllib3==2.0.7
+urllib3
 vaderSentiment==3.3.2
 validators==0.22.0
 wcwidth==0.2.9
@@ -148,3 +148,6 @@ websocket-client==1.7.0
 Werkzeug==3.0.1
 widgetsnbextension==4.0.10
 zipp==3.17.0
+pdf2image==1.16.3
+PyPDF2==3.0.1
+poppler-utils==0.1.0
